<resources>
    <string name="app_name">左邻右里</string>
    <string name="gui_username">用户名</string>
    <string name="gui_motto">喵喵喵喵喵？</string>
    <string name="gui_settings">设置</string>
    <string name="gui_profile">档案</string>
    <string name="gui_favourite">收藏</string>
    <string name="gui_contacts">联系人</string>
    <string name="gui_messages">私信</string>
    <string name="gui_about">关于左邻右里</string>
    <string name="gui_my_profile_demo">左邻右里</string>
    <string name="gui_enter_username">输入用户名</string>
    <string name="gui_sign_in">登录</string>
    <string name="gui_enter_password">输入密码</string>
    <string name="gui_have_no_account">新用户注册</string>
    <string name="gui_forget_password">忘记密码？</string>
    <string name="gui_back">返回</string>
    <string name="gui_help_and_feedback"><![CDATA[求助与反馈]]></string>
    <string name="gui_features">新功能</string>
    <string name="gui_version_check">检查版本</string>
    <string name="gui_time">2016 冬</string>
    <string name="license_apache">Apache 2.0 License</string>
    <string name="gui_author">Tnecesoc</string>
    <string name="gui_0">0</string>
    <string name="gui_posts">帖子</string>
    <string name="gui_download_files">下载内容</string>
    <string name="gui_new_user">新用户注册</string>
    <string name="gui_check_the_term_of_use">查看用户协议</string>
    <string name="enter_phone">输入登记的手机号码</string>
    <string name="phone_area_default">+86</string>
    <string name="plus">+</string>
    <string name="your_community">登记社区</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="sign_up">注册</string>
    <string name="_continue">好的</string>
    <string name="log_out">注销</string>
    <string name="gui_nickname">昵称</string>
    <string name="gui_avatar">头像</string>
    <string name="gui_community">社区</string>
    <string name="gui_Nickname">昵称</string>
    <string name="gui_gender">性别</string>
    <string name="gui_email_address">邮件地址</string>
    <string name="gui_phone">手机号码</string>
    <string name="gui_Motto">个人留言</string>
    <string name="gui_password">密码</string>
    <string name="gui_address">地址</string>

    <string name="tab_title_friend">互相关注</string>
    <string name="tab_title_follow">我关注的</string>
    <string name="tab_title_follower">关注我的</string>

    <string name="hint_no_such_contact">没有符合此分类的联系人</string>
    <string name="hint_network_unavailable">网络错误或未连接</string>
    <string name="hi">Hi!</string>
    <string name="meet_with_your">O2O 时代新互动</string>
    <string name="neighbors">左邻右里</string>

    <string name="gui_skip">诚信跳过</string>
    <string name="hint_onSkip">咕咕咕咕咕？</string>
    <string name="gui_onIndexBackPressed">听说你想退出？</string>

    <string name="hint_unfollow_contact">取消关注</string>
    <string name="hint_follow_contact">关注</string>
    <string name="neighbor_chat">邻里圈</string>
    <string name="add_contacts">添加联系人</string>

    <string name="activity_profile">档案</string>

    <string name="search_a_contact_by_id">通过用户名搜索</string>
    <string name="join_groups">加入的邻里圈</string>
    <string name="activity_sign_up">注册</string>
    <string name="activity_about">关于左邻右里</string>
    <string name="activity_favourite">收藏</string>
    <string name="activity_download_files">下载内容</string>
    <string name="activity_settings">设置</string>
    <string name="activity_contacts">联系人</string>
    <string name="activity_posts">帖子</string>
    <string name="activity_messages">私信</string>
    <string name="activity_search_contact">搜索用户</string>
    <string name="info_new_features">持续更新中</string>
    <string name="info_help_and_feedback">自己反馈自己吧</string>
    <string name="info_version_check">封测版</string>
    <string name="tab_home">首页</string>
    <string name="tab_chats">邻里圈</string>
    <string name="tab_me">个人信息</string>
    <string name="hint_username_not_exist">用户名不存在</string>
    <string name="warn_changing_protected_info">修改被保护的信息</string>
    <string name="info_warn_changing_protected_info">没写后台，直接改数据库吧</string>
    <string name="info_ask_gender">你的性别</string>

    <string name="gui_new_nickname">新昵称</string>
    <string name="gui_new_motto">新个人留言</string>
    <string name="gui_new_email">新邮件地址</string>
    <string name="gui_new_address">新住址</string>

    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    <string name="gender_secret">保密</string>
    <string name="hint_access_denied">用户名或密码错误</string>
    <string name="gui_send"> 发送 </string>
    <string name="warn_you_sure">你确认吗？</string>
    <string name="hint_choice_negative">算了</string>
    <string name="follow_succeed">关注成功</string>
    <string name="unfollow_succeed">操作成功</string>
    <string name="gui_send_message">发送私信</string>
    <string name="notify_new_msg">有新的未读私信</string>
    <string name="gui_from_neighbors">来自左邻右里</string>
    <string name="gui_new_post">发帖</string>
</resources>