<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".Modules.Login.View.LoginActivity"
        android:gravity="center_horizontal">

    <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:scaleType="fitXY"
            android:src="@drawable/app_icon_deep_shy_blue"
            android:id="@+id/img_login_avatar"
            android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:layout_margin="32dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_login_username"
            android:drawablePadding="2dp"
            android:hint="@string/gui_enter_username"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:inputType="text"
            android:layout_below="@+id/img_login_avatar" android:layout_centerHorizontal="true"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_login_password"
            android:drawablePadding="2dp"
            android:fontFamily="@android:string/defaultMsisdnAlphaTag"
            android:hint="@string/gui_enter_password"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:inputType="textWebPassword"
            android:layout_below="@+id/txt_login_username" android:layout_centerHorizontal="true"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gui_sign_in"
            android:id="@+id/btn_login_sign_in"
            android:background="@drawable/btn_primary"
            android:clickable="false"
            android:layout_below="@+id/txt_login_password" android:layout_centerHorizontal="true"
            android:layout_margin="16dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gui_check_the_term_of_use"
            android:layout_below="@+id/btn_login_sign_in"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorPrimary"
            android:id="@+id/lbl_login_check_term_of_use" android:textSize="16sp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/gui_forget_password"
            android:id="@+id/lbl_login_forget_password"
            android:textSize="18sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_margin="16dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gui_new_user"
            android:id="@+id/lbl_login_new_user"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:layout_alignTop="@+id/lbl_login_forget_password" android:layout_alignParentEnd="true"
            android:layout_marginRight="16dp"/>


</RelativeLayout>
