<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Modules.Login.View.SignUpActivity">

    <LinearLayout
            android:background="@drawable/stroke_layout"
            android:weightSum="10"
            android:divider="@drawable/divider"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="48dp">
        <EditText
                android:textColor="@color/colorPrimary"
                android:layout_weight="8"
                android:background="@android:color/transparent"
                android:id="@+id/txt_sign_up_phone_area"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@android:string/defaultMsisdnAlphaTag"
                android:inputType="phone"
                android:textAlignment="center"
                android:text="@string/phone_area_default"/>
        <EditText
                android:layout_weight="2"
                android:background="@android:color/transparent"
                android:id="@+id/txt_sign_up_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@android:string/defaultMsisdnAlphaTag"
                android:inputType="phone"
                android:hint="@string/enter_phone"/>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_sign_up_community"
            app:errorEnabled="true"
            android:layout_marginTop="4dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@android:string/defaultMsisdnAlphaTag"
                android:inputType="text"
                android:hint="@string/your_community"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <ImageView
                        android:id="@+id/img_sign_up_avatar"
                        android:src="@drawable/ask_for_photo"
                        android:visibility="gone"
                        android:scaleType="centerInside"
                        android:layout_width="96dp"
                        android:layout_height="96dp"/>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                            android:id="@+id/txt_sign_up_username"
                            app:errorEnabled="true"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:visibility="gone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        <android.support.design.widget.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@android:string/defaultMsisdnAlphaTag"
                                android:inputType="text"
                                android:hint="@string/username"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:visibility="gone"
                            app:errorEnabled="true"
                            android:id="@+id/txt_sign_up_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        <android.support.design.widget.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@android:string/defaultMsisdnAlphaTag"
                                android:inputType="textPassword"
                                android:hint="@string/password"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
    </LinearLayout>


    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_continue"
            android:textColor="@android:color/white"
            android:id="@+id/btn_sign_up_sign_up"
            android:background="@drawable/btn_primary"
            android:clickable="true"
            android:layout_margin="16dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gui_check_the_term_of_use"
            android:textColor="@color/colorPrimary"
            android:id="@+id/lbl_login_check_term_of_use" android:textSize="16sp"/>


</LinearLayout>
