<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".Modules.SplashScreen.View.IndexActivity"
        android:background="@color/colorPrimary">

    <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <FrameLayout

                android:layout_marginBottom="64dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <ImageView
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:src="@drawable/app_icon_white"
                    android:visibility="visible"/>

            <TextView
                    android:id="@+id/lbl_index_hi"
                    android:layout_gravity="center"
                    android:text="@string/hi"
                    android:textSize="48sp"
                    android:textAlignment="center"
                    android:fontFamily="cursive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </FrameLayout>

        <LinearLayout
                android:layout_marginTop="64dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/lbl_index_meet_with_your"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white"
                    android:fontFamily="serif"
                    android:textSize="18sp"
                    android:text="@string/meet_with_your"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/lbl_index_neighbors"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white"
                    android:fontFamily="serif"
                    android:textSize="48sp"
                    android:text="@string/neighbors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>


    <TextView
            android:id="@+id/lbl_index_skip"
            android:layout_gravity="bottom|right"
            android:background="@drawable/btn_white_stroke"
            android:textColor="@android:color/white"
            android:layout_margin="16dp"
            android:padding="16dp"
            android:text="@string/gui_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



</FrameLayout>
