<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:fresco="http://schemas.android.com/apk/res-auto"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_rectangle_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

    <RelativeLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingBottom="16dp">

        <!--&lt;!&ndash;used to get a preview&ndash;&gt;-->
        <!--<ImageView-->
                <!--android:id="@+id/img_profile_page_avatar"-->
                <!--android:src="@drawable/avatar_default"-->
                <!--android:layout_marginStart="16dp"-->
                <!--android:layout_marginTop="16dp"-->
                <!--android:layout_width="64dp"-->
                <!--android:layout_height="64dp"/>-->

        <com.facebook.drawee.view.SimpleDraweeView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:id="@+id/img_profile_page_avatar"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            fresco:actualImageScaleType="focusCrop"
            fresco:roundedCornerRadius="5dp"
            fresco:roundingBorderWidth="1px"
            fresco:fadeDuration="0"
            fresco:roundingBorderColor="@android:color/black"/>

        <TextView
                android:layout_alignTop="@+id/img_profile_page_avatar"
                android:layout_toEndOf="@+id/img_profile_page_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:text="@string/gui_nickname"
                android:id="@+id/lbl_profile_page_nickname"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"/>

        <ImageView
                android:id="@+id/img_profile_page_gender"
                android:layout_alignTop="@+id/img_profile_page_avatar"
                android:layout_toEndOf="@+id/lbl_profile_page_nickname"
                android:scaleType="fitCenter"
                android:layout_marginStart="8dp"
                android:layout_marginTop="7dp"
                android:src="@drawable/male"
                android:layout_width="16dp"
                android:layout_height="16dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/lbl_profile_page_nickname"
                android:layout_below="@+id/lbl_profile_page_nickname"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp"
                android:text="@string/gui_username"
                android:id="@+id/lbl_profile_page_username"
                android:layout_gravity="center_horizontal"/>

        <TextView
                android:id="@+id/lbl_profile_page_motto"
                android:layout_toEndOf="@+id/img_profile_page_avatar"
                android:layout_alignBottom="@+id/img_profile_page_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gui_motto"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"/>

    </RelativeLayout>

    <LinearLayout
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:baselineAligned="false">
        <LinearLayout
                android:id="@+id/layout_profile_page_contacts"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:clickable="true"
                android:background="@drawable/left_bottom_bookmark"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

            <TextView
                    android:id="@+id/lbl_profile_page_contacts_count"
                    android:text="@string/gui_0"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
    
            <TextView
                    android:textColor="@android:color/black"
                    android:text="@string/gui_contacts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/layout_profile_page_messages"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:clickable="true"
                android:background="@drawable/middle_bottom_bookmark"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
            <TextView
                    android:id="@+id/lbl_profile_page_message_count"
                    android:text="@string/gui_0"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_marginTop="8dp"/>
            <TextView
                    android:textColor="@android:color/black"
                    android:text="@string/gui_messages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_marginBottom="8dp"/>
        </LinearLayout>
        <LinearLayout
                android:id="@+id/layout_profile_page_posts"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:clickable="true"
                android:background="@drawable/right_bottom_bookmark"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
            <TextView
                    android:id="@+id/lbl_profile_page_posts_count"
                    android:text="@string/gui_0"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:textColor="@android:color/black"
                    android:text="@string/gui_posts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>